[package]
name = "warframe_market"
version = "0.4.0"
edition = "2024"
description = "An async api wrapper for the warframe.market api"
readme = "README.md"
repository = "https://github.com/TylerHendricks/warframe_market"
license = "MIT"
keywords = ["warframe", "market", "wrapper"]
categories = ["api-bindings"]

[dependencies]
reqwest = "0.12.23"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["macros"] }
